# avcrm_backend_fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  README_RU.md  alembic.ini  cli.py  docker-compose-test.yml  hello.py  pyproject.toml
app/: db.py  main.py  schemas.py
app/api/v1/: api.py
app/api/v1/endpoints/: attach.py  attach_group.py  client.py  login.py  request.py  user.py
app/core/: config.py  security.py  tasks.py
app/crud/: attach.py  attach_group.py  base.py  client.py  request.py  user.py
app/models/: __init__.py  attach.py  attach_group.py  base.py  client.py  permission.py  request.py  request_service.py  role.py  user.py  user_login.py
app/schemas/: attach.py  attach_group.py  client.py  request.py  security.py  user.py
app/utils/: bcrypt.py  custom_logging.py  filepath.py  partial.py  rate_limit.py  translit.py
migrations/: env.py
migrations/versions/: 00e5de83d7c3_attach_group_id_nullable.py  43cef753ebb4_last_name_nullable_request_and_.py  51ebd275e971_create_user_role_and_permission_tables.py  5d9c8fe0ac57_remove_on_delete_from_request_service_id.py  6403e3aac850_cascade_delete.py  6778190b2dc3_user_password_now_nullable_client_model.py  7fa0fca70702_user_login_and_user_login_succeed.py  d0bcdd034e4e_add_password_field.py  ddca03a37cb9_attach_group_and_attach_model.py
tests/: conftest.py
tests/api/: test_attachs.py  test_attachs_groups.py  test_clients.py  test_login.py  test_requests.py  test_user.py  test_users.py
